--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Ford Tribute Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="folders/styling/styling/main.css" />
+		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body >
 
