changed heading back to normal

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         width: auto;
         height: auto;">
 
-        <h1> Test Again Henry Ford </h1>
+        <h1> Henry Ford </h1>
         <h5> "Whether you think you can, or you think you can’t – you’re right."</h5>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Henry_ford_1919.jpg/376px-Henry_ford_1919.jpg">
         <img 
